# wizengamot

./: .gitignore  AGENTS.md  CLAUDE.md  FEATURES.md  README.md  docker-compose.yml  pyproject.toml  start.sh
backend/: config.py  content.py  council.py  graph_curation.py  graph_curation_agent.py  graph_feedback.py  graph_quality.py  graph_rag.py  graph_search.py  knowledge_discovery.py  knowledge_graph.py  main.py  monitor_analysis.py  openrouter.py  podcast.py  podcast_characters.py  podcast_defaults.py  podcast_elevenlabs.py  podcast_qwen.py  podcast_storage.py  podcast_styles.py  prompts.py  search.py  settings.py  source_metadata.py  stage_prompts.py  storage.py  synthesizer.py  synthesizer_kg.py  synthesizer_stage_prompts.py  threads.py  visualiser.py
backend/crawler/: fallback.py
backend/tests/: test_podcast_audio.py  test_podcast_characters.py  test_podcast_discovery.py  test_podcast_e2e.py  (+2 more)
docs/: FEATURES.md  curation.md  live-annotation-feature.md  showcase_library.md
frontend/: package-lock.json  package.json
hooks/: post-commit
prompts/: summarizer.md  zettel.md
services/qwen3-tts/: pyproject.toml  requirements.txt  server.py
services/qwen3-tts/tests/: __init__.py  test_clone_e2e.py  test_service.py
services/qwen3-tts/voices/: .gitkeep  clone_18357710.json  clone_21b430fb.json  clone_2a7b6f65.json  clone_2f979e99.json  clone_3317fa9a.json  clone_59832efa.json  clone_628c8424.json  clone_650f5b2c.json  clone_68cf22cb.json  clone_6c96c779.json  clone_72a2e651.json  clone_8af3e962.json  clone_9b2d6e62.json  clone_a61497e8.json  clone_bfddc90f.json  clone_d9f3ee03.json  clone_e3304e5a.json  clone_f5c111ab.json  clone_f74c2a85.json  design_1646109f.json  design_2c932322.json  design_2e91180d.json  design_51245f23.json  design_59f6a24d.json  design_712a47ad.json  design_743f7f63.json  design_c741d5dd.json  design_e298eed8.json  design_eb3a41e0.json  metadata.json
(+209 files in other folders)
