[project]
name = "qwen3-tts-service"
version = "0.1.0"
description = "Qwen3-TTS native service for podcast audio generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Pin numba/llvmlite first to get Python 3.12 compatible versions
    "numba>=0.59.0",
    "llvmlite>=0.42.0",
    "librosa>=0.10.0",
    # Main TTS package
    "qwen-tts",
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart",
    # Audio processing
    "soundfile",
    "pydub",
    "faster-whisper>=1.0.0",
    "numpy>=1.24.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
