[project]
name = "qwen3-tts-service"
version = "0.3.0"
description = "Qwen3-TTS native service for podcast audio generation (MLX optimized)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # MLX-based TTS for Apple Silicon optimization
    # Installing from main branch to test upstream fixes for speaker encoder
    "mlx-audio @ git+https://github.com/Blaizzy/mlx-audio.git@main",
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart",
    # HTTP client for Colab communication
    "requests>=2.31.0",
    # Audio processing
    "soundfile",
    "pydub",
    "faster-whisper>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
# Allow prereleases for mlx-audio and its dependencies (transformers 5.x)
prerelease = "allow"
